# programming

./: .gitignore  .vimrc  45_angle_print.py  8queens.py  CMakeLists.txt  Curiously_Recurring_Template_Pattern.cpp  appear_once.py  array_greatest_value.py  auto_lock.h  bin_lowest_parent.py  bin_search_tree_mirror.py  bin_search_tree_post_traverse.py  bin_tree_2_double_link_list.py  bin_tree_deepth.py  bin_tree_define.py  bin_tree_sum_all_path.py  bubble_sort.py  copy_complicated_list.py  dp_coins.py  fibonacci.py  google.py  hosts.py  k_mins.py  link_same.py  list.py  list_revert.cpp  longest_common_subsequence.py  markov.c  markov.py  max_diff.py  memmove.c  n25.py  n26.py  n36.py  n60.py  odd_pre_even.py  print_matrix.py  print_n_digit.py  print_snake_matrix.py  reverse_stack.cpp  (+12 more)
Restrictions/: steps
collage/: Buy-American-I-Am  Renting-an-Apartment  avplayer.html  car-driving  films  houjie.sql  plan  plan.html  python3  serials  singleton.cpp  sites  sites.pending  sites.txt  stock  travels  ubuntu.txt  扁鹊见秦武王  钉钉子
dp/: AvoidRoads.py  ChessMetric.py  edit_distance.py  longest_common_subsequence.py  zigzag.py
jjhou/: 2jjalloc.h
list/: list_lib.h  list_revert.cpp  merge_n_lists.cpp
literature_chinese/: 伶官传序.docx  谢玄传.docx
references/: books-read.txt  books.txt
reviewed/: 8queens.py  appear_once.py  bin_tree_2_double_link_list.py  bin_tree_2_node_farthest_distance.py  dp_LIS.py  max_profit.py  memmove.c  odd_pre_even.py  removeDuplicates.py  reverse_stack.cpp  sorted_array_sum.py  spiralOrder.py  ugly_number.py  understand_memory_acquire_release.cpp  (+2 more)
(+39 files in other folders)
